add ability to get weather for specific location

--- a/index.html
+++ b/index.html
@@ -9,5 +9,11 @@
   </head>
   <body>
     <h1>Weather App</h1>
+    <form>
+      <label for="location">Get weather for location: </label>
+      <input type="text" name="location" id="location" />
+      <button type="submit">Submit</button>
+    </form>
+    <output></output>
   </body>
 </html>
