--- a/index.html
+++ b/index.html
@@ -15,19 +15,7 @@
       <input type="text" name="location" id="location" />
       <button type="submit">Submit</button>
     </form>
-    
-    <div class="weather">
-      <div class="location">Wellington, New Zealand</div>
-      <img
-      class="icon"
-      src="//cdn.weatherapi.com/weather/64x64/day/122.png"
-      alt="weather icon"
-      />
-      <div class="condition">Mostly Cloudy</div>
-      <div>
-        <span class="temp">19</span>
-        <button class="toggle" type="button">&deg;C</button>
-      </div>
-    </div>
+
+    <div id="weather-list"></div>
   </body>
 </html>
