--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
       <button type="submit">Submit</button>
     </form>
 
-    <div id="weather-list"></div>
+    <div id="locations"></div>
   </body>
 </html>
