add ability to update existing weather

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <button type="submit">Submit</button>
     </form>
 
+    <button class="update-btn" type="button">Update</button>
     <div id="locations"></div>
   </body>
 </html>
